--- a/package.json
+++ b/package.json
@@ -9,16 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
+    "bootstrap": "^5.3.2",
+    "next": "13.5.4",
+    "next-redux-wrapper": "^8.1.0",
     "react": "^18",
+    "react-bootstrap": "^2.9.0",
     "react-dom": "^18",
-    "next": "13.5.4"
+    "react-redux": "^8.1.3",
+    "sass": "^1.69.2"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "13.5.4"
+    "eslint-config-next": "13.5.4",
+    "typescript": "^5"
   }
 }
