--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
     "bootstrap": "^5.3.2",
+    "firebase": "^10.5.2",
     "next": "13.5.4",
     "next-redux-wrapper": "^8.1.0",
     "react": "^18",
