auth with formik

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@reduxjs/toolkit": "^1.9.7",
     "bootstrap": "^5.3.2",
     "firebase": "^10.5.2",
+    "formik": "^2.4.5",
     "next": "13.5.4",
     "next-redux-wrapper": "^8.1.0",
     "react": "^18",
