--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-bootstrap": "^2.9.0",
     "react-dom": "^18",
     "react-redux": "^8.1.3",
+    "redux-persist": "^6.0.0",
     "sass": "^1.69.2"
   },
   "devDependencies": {
